--- a/Team_daa.html
+++ b/Team_daa.html
@@ -58,7 +58,7 @@
             </ul>
         </div>
         <div>
-            <button><a href="daa_coursep.html">Back</a></button>
+            <button><a href="index.html">Back</a></button>
         </div>
     </div>
 </body>
