--- a/Fares.html
+++ b/Fares.html
@@ -98,7 +98,7 @@
     </div>
 
     <div>
-        <button><a href="daa_coursep.html">Back</a></button>
+        <button><a href="index.html">Back</a></button>
     </div>
 
     <script>
