--- a/index.html
+++ b/index.html
@@ -4,65 +4,106 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Efficient Public Transport Management System</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
         body {
             margin: 0;
-            font-family: 'Roboto', sans-serif;
-            background: linear-gradient(to right, #6a11cb, #2575fc);
+            font-family: 'Poppins', sans-serif;
+            background: linear-gradient(to bottom right, #1e3c72, #2a5298);
             color: #fff;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
+            overflow: hidden;
         }
 
         .container {
             text-align: center;
-            max-width: 600px;
-            padding: 20px;
-            border-radius: 12px;
-            background: rgba(0, 0, 0, 0.7);
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+            max-width: 650px;
+            padding: 30px;
+            border-radius: 15px;
+            background: rgba(255, 255, 255, 0.1);
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+            backdrop-filter: blur(10px);
+            position: relative;
+        }
+
+        .container::before {
+            content: '';
+            position: absolute;
+            top: -10px;
+            right: -10px;
+            bottom: -10px;
+            left: -10px;
+            background: linear-gradient(45deg, #fb545a, #e3522a, #f11eb5);
+            z-index: -1;
+            filter: blur(20px);
+            border-radius: 15px;
         }
 
         .title {
-            font-size: 2rem;
+            font-size: 2.5rem;
             margin-bottom: 20px;
             text-transform: uppercase;
             font-weight: 700;
+            letter-spacing: 2px;
+            color: #f8f9fa;
         }
 
         .description {
-            font-size: 1rem;
+            font-size: 1.1rem;
             margin-bottom: 30px;
-            line-height: 1.5;
+            line-height: 1.8;
+            color: #e0e0e0;
         }
 
         .buttons {
             display: flex;
             flex-wrap: wrap;
-            gap: 15px;
+            gap: 20px;
             justify-content: center;
         }
 
         .button {
-            background-color: #2575fc;
+            background: linear-gradient(90deg, #6a11cb, #2575fc);
             color: #fff;
             font-size: 1rem;
             font-weight: 500;
             text-transform: uppercase;
-            padding: 12px 20px;
+            padding: 15px 25px;
             border: none;
             border-radius: 8px;
             cursor: pointer;
-            transition: background-color 0.3s ease, transform 0.2s ease;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
             text-decoration: none;
+            display: inline-block;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
         }
 
         .button:hover {
-            background-color: #6a11cb;
-            transform: scale(1.1);
+            transform: translateY(-5px);
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4);
+        }
+
+        .button:active {
+            transform: translateY(0);
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+        }
+
+        @media (max-width: 768px) {
+            .title {
+                font-size: 2rem;
+            }
+
+            .description {
+                font-size: 1rem;
+            }
+
+            .button {
+                font-size: 0.9rem;
+                padding: 12px 20px;
+            }
         }
     </style>
 </head>
